force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/agf__PPM_Project_Accomplishment__c.object-meta.xml
<CustomObject>
    <description>PPM: Used to capture Project Accomplishments.</description>
    <label>Accomplishment</label>
    <nameField>
        <label>Accomplishment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accomplishments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>