force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Accomplishment_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Accomplishment_Date__c</fullName>
    <label>Accomplishment Date</label>
    <type>Date</type>
</CustomField>