force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Accomplishment_Number__c.field-meta.xml
<CustomField>
    <fullName>agf__Accomplishment_Number__c</fullName>
    <displayFormat>PA-{000000}</displayFormat>
    <label>Accomplishment Number</label>
    <type>AutoNumber</type>
</CustomField>