force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Accomplishment_Summary__c.field-meta.xml
<CustomField>
    <fullName>agf__Accomplishment_Summary__c</fullName>
    <label>Accomplishment Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>