force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Accomplishment_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Accomplishment_Type__c</fullName>
    <label>Accomplishment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>