force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Planned_Date__c</fullName>
    <description>Planned date for the accomplishment.</description>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>