force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Portfolio__c.field-meta.xml
<CustomField>
    <fullName>agf__Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>agf__PPM_Portfolio__c</referenceTo>
    <relationshipName>Portfolio_Accomplishments</relationshipName>
    <type>Lookup</type>
</CustomField>