force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Portfolio_Health__c.field-meta.xml
<CustomField>
    <fullName>agf__Portfolio_Health__c</fullName>
    <description>Health of the associated Portfolio.</description>
    <formula>text ( agf__Portfolio__r.agf__Portfolio_Health__c )</formula>
    <inlineHelpText>Health of the associated Portfolio.</inlineHelpText>
    <label>Portfolio Health</label>
    <type>Text</type>
</CustomField>