force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Program_Health__c.field-meta.xml
<CustomField>
    <fullName>agf__Program_Health__c</fullName>
    <description>Health of the associated Program.</description>
    <formula>text ( agf__Program__r.agf__Program_Health__c )</formula>
    <inlineHelpText>Health of the associated Program.</inlineHelpText>
    <label>Program Health</label>
    <type>Text</type>
</CustomField>