force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Project__c.field-meta.xml
<CustomField>
    <fullName>agf__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>agf__PPM_Project__c</referenceTo>
    <relationshipName>Project_Accomplishments</relationshipName>
    <type>Lookup</type>
</CustomField>