force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Project_Health__c.field-meta.xml
<CustomField>
    <fullName>agf__Project_Health__c</fullName>
    <description>Health of the associated project.</description>
    <formula>text( agf__Project__r.agf__Project_Health__c)</formula>
    <inlineHelpText>Health of the associated project.</inlineHelpText>
    <label>Project Health</label>
    <type>Text</type>
</CustomField>