force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__PPM_Project_Accomplishment__c/fields/agf__Publish__c.field-meta.xml
<CustomField>
    <fullName>agf__Publish__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies whether this accomplishment is to be published or not.</description>
    <inlineHelpText>Identifies whether this accomplishment is to be published or not.</inlineHelpText>
    <label>Publish</label>
    <type>Checkbox</type>
</CustomField>